project('sqlite', 'c',
    version : '3.49.0',
)

src = files(
  'alter.c',
  'analyze.c',
  'attach.c',
  'auth.c',
  'backup.c',
  'bitvec.c',
  'btmutex.c',
  'btree.c',
  'build.c',
  'callback.c',
  'complete.c',
  'ctime.c',
  'date.c',
  'dbpage.c',
  'dbstat.c',
  'delete.c',
  'expr.c',
  'fault.c',
  'fkey.c',
  'func.c',
  'global.c',
  'hash.c',
  'insert.c',
  'json.c',
  'legacy.c',
  'loadext.c',
  'main.c',
  'malloc.c',
  'mem0.c',
  'mem1.c',
  'mem2.c',
  'mem3.c',
  'mem5.c',
  'memdb.c',
  'memjournal.c',
  'mutex.c',
  'mutex_noop.c',
  'notify.c',
  'os.c',
  'pager.c',
  'parse.c',
  'pcache.c',
  'pcache1.c',
  'pragma.c',
  'prepare.c',
  'printf.c',
  'random.c',
  'resolve.c',
  'rowset.c',
  'select.c',
  'status.c',
  'table.c',
  'threads.c',
  'tokenize.c',
  'treeview.c',
  'trigger.c',
  'utf.c',
  'update.c',
  'upsert.c',
  'util.c',
  'vacuum.c',
  'vdbe.c',
  'vdbeapi.c',
  'vdbeaux.c',
  'vdbeblob.c',
  'vdbemem.c',
  'vdbesort.c',
  'vdbetrace.c',
  'vdbevtab.c',
  'vtab.c',
  'wal.c',
  'walker.c',
  'where.c',
  'wherecode.c',
  'whereexpr.c',
  'window.c',
)

inc = include_directories('.')
